--- a/buildspecs/infra-validate.yml
+++ b/buildspecs/infra-validate.yml
@@ -9,14 +9,12 @@ phases:
   pre_build:
     commands:
       - echo "PWD=$(pwd)"
-      - echo "Listing repo contents:"
-      - ls -la
-      - echo "Listing cfn/ contents:"
-      - ls -la cfn || true
-      - test -e cfn/hello-eks.yaml || (echo "ERROR: cfn/hello-eks.yaml not found" && exit 2)
+      - echo "Listing repo contents"; ls -la
+      - echo "Listing cfn/ contents"; ls -la cfn || true
+      - if [ ! -f cfn/hello-eks.yaml ]; then echo 'ERROR: cfn/hello-eks.yaml not found'; exit 2; fi
   build:
     commands:
-      - cfn-lint -t cfn/hello-eks.yaml
+      - cfn-lint -t ./cfn/hello-eks.yaml
 artifacts:
   files:
     - cfn/hello-eks.yaml
