--- a/buildspecs/infra-validate.yml
+++ b/buildspecs/infra-validate.yml
@@ -1,4 +1,5 @@
 version: 0.2
+
 phases:
   install:
     runtime-versions:
@@ -6,15 +7,20 @@ phases:
     commands:
       - python3 -m pip install --upgrade pip
       - python3 -m pip install cfn-lint
+
   pre_build:
     commands:
-      - echo "PWD=$(pwd)"
-      - echo "Listing repo contents"; ls -la
-      - echo "Listing cfn/ contents"; ls -la cfn || true
-      - if [ ! -f cfn/hello-eks.yaml ]; then echo 'ERROR: cfn/hello-eks.yaml not found'; exit 2; fi
+      - 'echo PWD=$(pwd)'
+      - 'echo Listing repo contents'
+      - 'ls -la'
+      - 'echo Listing cfn contents'
+      - 'ls -la cfn || true'
+      - '[ -f cfn/hello-eks.yaml ] || { echo "ERROR missing cfn/hello-eks.yaml"; exit 2; }'
+
   build:
     commands:
-      - cfn-lint -t ./cfn/hello-eks.yaml
+      - 'cfn-lint -t ./cfn/hello-eks.yaml'
+
 artifacts:
   files:
     - cfn/hello-eks.yaml
