--- a/buildspecs/infra-validate.yml
+++ b/buildspecs/infra-validate.yml
@@ -5,9 +5,8 @@ phases:
       python: 3.9
     commands:
       - python3 -m pip install --upgrade pip
-      - python3 -m pip install --user cfn-lint
-      - export PATH="$PATH:/root/.local/bin"
-      - cfn-lint --version
+      - python3 -m pip install cfn-lint
+      - python3 -c "import cfnlint, sys; print('cfn-lint installed:', cfnlint.__version__)"
   pre_build:
     commands:
       - echo "PWD=$(pwd)"
@@ -18,7 +17,7 @@ phases:
       - '[ -f cfn/hello-eks.yml ] || { echo "ERROR: cfn/hello-eks.yml not found"; exit 2; }'
   build:
     commands:
-      - cfn-lint -t cfn/hello-eks.yml
+      - python3 -m cfnlint -t cfn/hello-eks.yml
 artifacts:
   files:
     - cfn/hello-eks.yml
