--- a/buildspecs/infra-validate.yml
+++ b/buildspecs/infra-validate.yml
@@ -6,12 +6,15 @@ phases:
     commands:
       - python3 -m pip install --upgrade pip
       - python3 -m pip install cfn-lint
-      - python3 -c "import cfnlint, sys; print('cfn-lint installed:', cfnlint.__version__)"
+      # Optional: show version in a portable way
+      - python3 -m pip show cfn-lint | awk '/Version/{print $0}'
   pre_build:
     commands:
       - echo "PWD=$(pwd)"
-      - echo "== repo root =="; ls -la
-      - echo "== cfn dir =="; ls -la cfn || true
+      - echo "== repo root =="
+      - ls -la
+      - echo "== cfn dir =="
+      - ls -la cfn || true
       - '[ -f cfn/hello-eks.yml ] || { echo "ERROR: cfn/hello-eks.yml not found"; exit 2; }'
   build:
     commands:
